# phone-call-tester

./: __init__.py  __main__.py  app.py  build_executable.bat  phone_call_tester.py
.github/workflows/: Build Desktop Executables  Build.yml  build-apk.yml  build-executables.yml  main.yml  uild-executables.yml
android_phone_tester/: pyproject.toml
